--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="modal"></div>
     <script src="./src/index.js" type="text/jsx"></script>
   </body>
 </html>
